# smoldot-kotlin

./: .gitignore  Dockerfile  README.md  build_docs.sh  build_smoldotlibs.sh  build_staticlibs.sh  index.html  navigation.html  settings.gradle.kts
.github/workflows/: docs.yml  main.yml
.scripts/: 0.1.0.sh  0.1.1.sh  functions.sh
distribution/smoldot/include/: smoldot.h
docs/scripts/: sourceset_dependencies.js
docs/smoldotkotlin/io.finsig.smoldotkotlin/: index.html  name.html
docs/smoldotkotlin/io.finsig.smoldotkotlin/-chain/: -chain.html
docs/smoldotkotlin/io.finsig.smoldotkotlin/-chain-id/: index.html
docs/smoldotkotlin/io.finsig.smoldotkotlin/-chain-specification/: index.html
docs/smoldotkotlin/io.finsig.smoldotkotlin/-client/: add.html  response.html  responses.html  send.html
docs/smoldotkotlin/io.finsig.smoldotkotlin/-client/-companion/: index.html  instance.html
gradle/wrapper/: gradle-wrapper.properties
scripts/: pages.json
smoldotkotlin/: build.gradle.kts  package-list  proguard-rules.pro
smoldotkotlin/io.finsig.smoldotkotlin/: read-from-asset.html
smoldotkotlin/io.finsig.smoldotkotlin/-chain/: index.html  specification.html
smoldotkotlin/io.finsig.smoldotkotlin/-client/: index.html  is-valid.html  remove.html
smoldotkotlin/src/main/: AndroidManifest.xml
smoldotkotlin/src/main/cpp/: CMakeLists.txt  smoldot-kotlin.cpp
smoldotkotlin/src/main/res/values/: strings.xml  themes.xml
smoldotkotlinexample/: build.gradle.kts
smoldotkotlinexample/src/main/: AndroidManifest.xml
smoldotkotlinexample/src/main/res/values/: colors.xml  (+1 more)
(+18 files in other folders)
